Fixed URI/Path conversion error in GoobiImageResource